--- a/display.html
+++ b/display.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-tauri-drag-region lang="en">
+<html data-tauri-drag-region lang="en" class="display">
 
 <head>
   <meta charset="UTF-8" />
